--- a/theme/base.html
+++ b/theme/base.html
@@ -1,6 +1,11 @@
 {% import "partials/language.html" as lang with context %}{% set feature = config.theme.feature %}{% set palette = config.theme.palette %}{% set font = config.theme.font %}<!DOCTYPE html>
 <html lang="{{ lang.t('language') }}" class="no-js">
   <head>
+    
+    {% set python_dc = '968E632EE0C0499DFB10' %}
+    {% set django_dc = 'D997332D5840A8BA0008' %}
+    {% set pyside_dc = 'C32CEA7B9D567957186B' %}
+
     {% block site_meta %}
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -145,24 +150,25 @@ div.my-img{text-align:center;margin-top:20px}
                 </div>
               </div>
             {% endif %}
+
             {% if page.toc %}
               <div class="md-sidebar md-sidebar--secondary" data-md-component="toc">
                 {% if not page.is_homepage %}
                   {% if "django" in page.canonical_url %}
                     <div class="course-offer" style="margin-bottom:25px;padding:0px 10px;">
-                      <a href="https://www.udemy.com/course/curso-django-2-practico-desarrollo-web-python-3/?couponCode=DC947D53C7154BB1BB10" target="_blank">
+                      <a href="https://www.udemy.com/course/curso-django-2-practico-desarrollo-web-python-3/?couponCode={{django_dc}}" target="_blank">
                         <img src="/cdn/assets/django.png" style="width:100%;justify-self:center;align-self:center;"/>
                       </a>
                     </div>
                   {% elif "pyside" in page.canonical_url %}
                     <div class="course-offer" style="margin-bottom:25px;padding:0px 10px;">
-                      <a href="https://www.udemy.com/course/python-desarrollo-interfaces-graficas-qt-pyside/?couponCode=76E57A0B1FA3F4E30F80" target="_blank">
+                      <a href="https://www.udemy.com/course/python-desarrollo-interfaces-graficas-qt-pyside/?couponCode={{pyside_dc}}" target="_blank">
                         <img src="/cdn/assets/pyside.png" style="width:100%;justify-self:center;align-self:center;"/>
                       </a>
                     </div>
                   {% else %}
                     <div class="course-offer" style="margin-bottom:25px;padding:0px 10px;">
-                      <a href="https://www.udemy.com/course/python-3-al-completo-desde-cero/?couponCode=266E0AAF1E3F0FAC358E" target="_blank">
+                      <a href="https://www.udemy.com/course/python-3-al-completo-desde-cero/?couponCode={{python_dc}}" target="_blank">
                         <img src="/cdn/assets/python.png" style="width:100%;justify-self:center;align-self:center;"/>
                       </a>
                     </div>
@@ -228,13 +234,13 @@ div.my-img{text-align:center;margin-top:20px}
     modalButtonOnly.setContent(`
     <div style="display:grid;grid-template-columns:32% 32% 32%;grid-column-gap: 1.33%;" id="supermodal">
       <div class="course">
-        <a href="https://www.udemy.com/course/python-3-al-completo-desde-cero/?couponCode=266E0AAF1E3F0FAC358E" target="_blank"><img src="/cdn/assets/python.png" style="width:100%;justify-self:center;align-self:center;"/></a>
+        <a href="https://www.udemy.com/course/python-3-al-completo-desde-cero/?couponCode={{python_dc}}" target="_blank"><img src="/cdn/assets/python.png" style="width:100%;justify-self:center;align-self:center;"/></a>
       </div>
       <div class="course">
-        <a href="https://www.udemy.com/course/curso-django-2-practico-desarrollo-web-python-3/?couponCode=DC947D53C7154BB1BB10" target="_blank"><img src="/cdn/assets/django.png" style="width:100%;justify-self:center;align-self:center;"/></a>
+        <a href="https://www.udemy.com/course/curso-django-2-practico-desarrollo-web-python-3/?couponCode={{django_dc}}" target="_blank"><img src="/cdn/assets/django.png" style="width:100%;justify-self:center;align-self:center;"/></a>
       </div>
       <div class="course">
-        <a href="https://www.udemy.com/course/python-desarrollo-interfaces-graficas-qt-pyside/?couponCode=76E57A0B1FA3F4E30F80" target="_blank"><img src="/cdn/assets/pyside.png" style="width:100%;justify-self:center;align-self:center;"/></a>
+        <a href="https://www.udemy.com/course/python-desarrollo-interfaces-graficas-qt-pyside/?couponCode={{pyside_dc}}" target="_blank"><img src="/cdn/assets/pyside.png" style="width:100%;justify-self:center;align-self:center;"/></a>
       </div>
     </div>`);
 
