--- a/theme/base.html
+++ b/theme/base.html
@@ -156,25 +156,37 @@ div.my-img{text-align:center;margin-top:20px}
                 {% if not page.is_homepage %}
                   {% if "django" in page.canonical_url %}
                     <div class="course-offer" style="margin-bottom:25px;padding:0px 10px;">
-                      <a href="https://www.udemy.com/course/curso-django-2-practico-desarrollo-web-python-3/?couponCode={{django_dc}}" target="_blank">
+                      <a href="https://www.hektorprofe.net/cupon/django" target="_blank">
                         <img src="/cdn/assets/django.png" style="width:100%;justify-self:center;align-self:center;"/>
                       </a>
                     </div>
                   {% elif "pyside" in page.canonical_url %}
                     <div class="course-offer" style="margin-bottom:25px;padding:0px 10px;">
-                      <a href="https://www.udemy.com/course/python-desarrollo-interfaces-graficas-qt-pyside/?couponCode={{pyside_dc}}" target="_blank">
+                      <a href="https://www.hektorprofe.net/cupon/pyside" target="_blank">
                         <img src="/cdn/assets/pyside.png" style="width:100%;justify-self:center;align-self:center;"/>
                       </a>
                     </div>
                   {% elif "tkinter" in page.canonical_url %}
                     <div class="course-offer" style="margin-bottom:25px;padding:0px 10px;">
-                      <a href="https://www.udemy.com/course/python-desarrollo-interfaces-graficas-qt-pyside/?couponCode={{pyside_dc}}" target="_blank">
+                      <a href="https://www.hektorprofe.net/cupon/pyside" target="_blank">
                         <img src="/cdn/assets/pyside.png" style="width:100%;justify-self:center;align-self:center;"/>
+                      </a>
+                    </div>
+                  {% elif "escueladevideojuegos" in page.canonical_url %}
+                    <div class="course-offer" style="margin-bottom:25px;padding:0px 10px;">
+                      <a href="https://www.hektorprofe.net/cupon/unity" target="_blank">
+                        <img src="/cdn/assets/unity.png" style="width:100%;justify-self:center;align-self:center;"/>
+                      </a>
+                    </div>
+                  {% elif "unity" in page.canonical_url %}
+                    <div class="course-offer" style="margin-bottom:25px;padding:0px 10px;">
+                      <a href="https://www.hektorprofe.net/cupon/unity" target="_blank">
+                        <img src="/cdn/assets/unity.png" style="width:100%;justify-self:center;align-self:center;"/>
                       </a>
                     </div>
                   {% else %}
                     <div class="course-offer" style="margin-bottom:25px;padding:0px 10px;">
-                      <a href="https://www.udemy.com/course/python-3-al-completo-desde-cero/?couponCode={{python_dc}}" target="_blank">
+                      <a href="https://www.hektorprofe.net/cupon/python" target="_blank">
                         <img src="/cdn/assets/python.png" style="width:100%;justify-self:center;align-self:center;"/>
                       </a>
                     </div>
@@ -240,13 +252,13 @@ div.my-img{text-align:center;margin-top:20px}
     modalButtonOnly.setContent(`
     <div style="display:grid;grid-template-columns:32% 32% 32%;grid-column-gap: 1.33%;" id="supermodal">
       <div class="course">
-        <a href="https://www.udemy.com/course/python-3-al-completo-desde-cero/?couponCode={{python_dc}}" target="_blank"><img src="/cdn/assets/python.png" style="width:100%;justify-self:center;align-self:center;"/></a>
+        <a href="https://www.hektorprofe.net/cupon/python" target="_blank"><img src="/cdn/assets/python.png" style="width:100%;justify-self:center;align-self:center;"/></a>
       </div>
       <div class="course">
-        <a href="https://www.udemy.com/course/curso-django-2-practico-desarrollo-web-python-3/?couponCode={{django_dc}}" target="_blank"><img src="/cdn/assets/django.png" style="width:100%;justify-self:center;align-self:center;"/></a>
+        <a href="https://www.hektorprofe.net/cupon/django" target="_blank"><img src="/cdn/assets/django.png" style="width:100%;justify-self:center;align-self:center;"/></a>
       </div>
       <div class="course">
-        <a href="https://www.udemy.com/course/python-desarrollo-interfaces-graficas-qt-pyside/?couponCode={{pyside_dc}}" target="_blank"><img src="/cdn/assets/pyside.png" style="width:100%;justify-self:center;align-self:center;"/></a>
+        <a href="https://www.hektorprofe.net/cupon/pyside" target="_blank"><img src="/cdn/assets/pyside.png" style="width:100%;justify-self:center;align-self:center;"/></a>
       </div>
     </div>`);
 
