--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">∫
         <a class="navbar-brand" href="https://www.hektorprofe.net"
-          ><img class="img-fluid" src="https://www.hektorprofe.net/images/logo.png" width="215px"
+          ><img class="img-fluid" src="https://payhip.com/cdn-cgi/image/format=auto/https://pe56d.s3.amazonaws.com/o_1hnt0c7ce117c1ujf17tv6m1htoi.png" width="215px"
         /></a>
         <button
           class="navbar-toggler"
@@ -64,11 +64,6 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/"
                   >Documentos
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link r-m" href="https://www.hektorprofe.net/portafolio/"
-                  >Portafolio
                 </a>
               </li>
               <li class="nav-item">
@@ -106,7 +101,7 @@
             <div class="container-flex author">
               <p>
                 <img
-                  src="https://www.hektorprofe.net/images/top-art-hektor.png"
+                  src="https://payhip.com/cdn-cgi/image/format=auto,width=500/https://pe56d.s3.amazonaws.com/o_1hino3ttpb761dg91dlf1003pf9c.png"
                   class="figure-img img-fluid rounded"
                   style="border-radius: 50% !important"
                   alt="It's a me... Hektor!"
