--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <link rel="stylesheet" href="/assets/stylesheets/normalize.min.css"/>
     <link rel="stylesheet" href="/assets/stylesheets/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://www.hektorprofe.net/css/styles.css?v=1.6" >
+    <link rel="stylesheet" href="/assets/stylesheets/styles-home.css?v=1.6" >
     <link rel="stylesheet" href="/assets/stylesheets/styles.css" >
     <script src="/assets/javascripts/vue.min.js"></script>
     <style>
