--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">∫
-        <a class="navbar-brand" href="https://www.hektorprofe.net"
+        <a class="navbar-brand" href="https://hektorprofe.net"
           ><img class="img-fluid" src="https://payhip.com/cdn-cgi/image/format=auto/https://pe56d.s3.amazonaws.com/o_1hnt0c7ce117c1ujf17tv6m1htoi.png" width="215px"
         /></a>
         <button
