--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">∫
+      <div class="container">
         <a class="navbar-brand" href="https://hektorprofe.net"
           ><img class="img-fluid" src="https://payhip.com/cdn-cgi/image/format=auto/https://pe56d.s3.amazonaws.com/o_1hnt0c7ce117c1ujf17tv6m1htoi.png" width="215px"
         /></a>
