--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="d-flex">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="https://www.hektorprofe.net/">Cursos </a>
+                <a class="nav-link" href="https://hektorprofe.net/">Cursos </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/"
